@@ -134,7 +134,14 @@ module ActiveMerchant #:nodoc:
         end
 
         def parse
-          doc = REXML::Document.new(@response)
+          require 'iconv' unless String.method_defined?(:encode)
+          if String.method_defined?(:encode)
+            doc = REXML::Document.new(@response.encode("UTF-8", "ISO-8859-1"))
+          else
+            ic = Iconv.new('UTF-8', 'ISO-8859-1')
+            doc = REXML::Document.new(ic.iconv(@response))
+          end
+
           auth_type = find(doc, "//Transaction/Type").to_s
 
           message = find(doc, "//Message/Text")
